# remote-desktop-application

./: .env.example  .gitignore  README.md  implementation_plan.md  package-lock.json  package.json  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml  deploy.yml
apps/client-app/: index.html  package.json  vite.config.ts
apps/client-app/src/: App.tsx
apps/client-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/host-agent/: index.html  package.json  vite.config.ts
apps/host-agent/src/: App.tsx  WebRTCHost.tsx
apps/host-agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/host-agent/src-tauri/src/: device_id.rs  input.rs  main.rs
infra/coturn/: turnserver.conf
infra/docker/: docker-compose.dev.yml  docker-compose.prod.yml
scripts/: mock-icons.js
