[package]
name = "host-agent"
version = "0.1.0"
description = "DeskLink Remote Desktop Host Agent"
authors = ["DeskLink Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56.0", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.25.0"
core-graphics = "0.23.1"
